spacing issues ugh

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,10 +90,10 @@ a:hover {
     margin: 0 auto;
     /* background-color: darkcyan; */
     /* padding-top: 40px; */
-    /* padding-right: 60px; */
+    padding-right: 50px;
 }
 
-.title {
+.paragraph {
     padding: 10px 0;
 }
 
@@ -107,8 +107,8 @@ a:hover {
 
 
 .bowser img {
-    padding-left: 30px;
-    /* border-radius: 5px; */
+    /* padding-left: 30px; */
+    border-radius: 10px;
     width: 300px;
 }
 
